changed down image

--- a/HenriPotier/Base.lproj/Main.storyboard
+++ b/HenriPotier/Base.lproj/Main.storyboard
@@ -65,6 +65,15 @@
                                     <constraint firstAttribute="trailing" secondItem="zcM-vz-sGj" secondAttribute="trailing" id="say-jx-O8g"/>
                                 </constraints>
                             </scrollView>
+                            <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kP7-Yk-AKN">
+                                <rect key="frame" x="8" y="28" width="25" height="25"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" red="1" green="0.35740719319999997" blue="0.23556545039999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" image="down_arrow"/>
+                                <connections>
+                                    <action selector="didmiss:" destination="WFT-at-zEi" eventType="touchUpInside" id="UQW-qI-fx1"/>
+                                </connections>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="99I-Pd-aLD">
                                 <rect key="frame" x="0.0" y="617" width="375" height="50"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
@@ -86,10 +95,12 @@
                             <constraint firstItem="YNZ-p8-HhA" firstAttribute="bottom" secondItem="99I-Pd-aLD" secondAttribute="bottom" id="2bG-43-bcK"/>
                             <constraint firstItem="99I-Pd-aLD" firstAttribute="top" secondItem="KUs-tx-Yor" secondAttribute="bottom" id="Bjz-Yq-QPu"/>
                             <constraint firstItem="zcM-vz-sGj" firstAttribute="width" secondItem="BFG-aH-Ds0" secondAttribute="width" id="Kmp-gC-sV5"/>
+                            <constraint firstItem="kP7-Yk-AKN" firstAttribute="top" secondItem="YNZ-p8-HhA" secondAttribute="top" constant="8" id="OHO-OA-kL2"/>
                             <constraint firstAttribute="trailing" secondItem="KUs-tx-Yor" secondAttribute="trailing" id="P2M-TV-kNs"/>
                             <constraint firstItem="99I-Pd-aLD" firstAttribute="leading" secondItem="YNZ-p8-HhA" secondAttribute="leading" id="QaP-Ae-aQp"/>
                             <constraint firstItem="YNZ-p8-HhA" firstAttribute="trailing" secondItem="99I-Pd-aLD" secondAttribute="trailing" id="kNV-Pj-FIQ"/>
                             <constraint firstItem="KUs-tx-Yor" firstAttribute="leading" secondItem="BFG-aH-Ds0" secondAttribute="leading" id="kxQ-Ie-lcc"/>
+                            <constraint firstItem="kP7-Yk-AKN" firstAttribute="leading" secondItem="YNZ-p8-HhA" secondAttribute="leading" constant="8" id="mii-h1-8tT"/>
                             <constraint firstItem="KUs-tx-Yor" firstAttribute="top" secondItem="BFG-aH-Ds0" secondAttribute="top" id="psG-CH-8rP"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="YNZ-p8-HhA"/>
@@ -103,7 +114,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Gnd-2f-19Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="441" y="121"/>
+            <point key="canvasLocation" x="229.59999999999999" y="120.98950524737631"/>
         </scene>
         <!--Cart-->
         <scene sceneID="u0t-hH-zBz">
@@ -216,10 +227,10 @@
             </objects>
             <point key="canvasLocation" x="-1063" y="121"/>
         </scene>
-        <!--Books View Controller-->
+        <!--Henri Potier-->
         <scene sceneID="XwS-XA-cFc">
             <objects>
-                <viewController id="lYg-6P-I7E" customClass="BooksViewController" customModule="HenriPotier" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Henri Potier" id="lYg-6P-I7E" customClass="BooksViewController" customModule="HenriPotier" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="L00-Pa-uQA">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -256,10 +267,11 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="m9d-do-aHC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-332" y="123"/>
+            <point key="canvasLocation" x="-270" y="105"/>
         </scene>
     </scenes>
     <resources>
         <image name="cart" width="25" height="25"/>
+        <image name="down_arrow" width="25" height="25"/>
     </resources>
 </document>
